<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/padding_grid"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:orientation="horizontal"
        app:useDefaultMargins="true">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Boy"
            android:textSize="16sp"
            app:layout_column="0"
            app:layout_gravity="right|center_vertical"
            app:layout_row="0" />


        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:digits="0123456789"
            android:inputType="number"
            android:maxLength="3"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            app:layout_column="1"
            app:layout_row="0">

            <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/boy_tw"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:background="#02E3D0"
            android:hint="@string/def_boy"
            android:padding="@dimen/padding_tv"
            android:textColor="#070606"
            android:textSize="16sp"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilo_tw"
            android:textSize="16sp"
            app:layout_column="0"
            app:layout_gravity="right|center_vertical"
            app:layout_row="1" />

        <TextView
            android:id="@+id/default_kilo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/kilo_bilgisi"
            android:textColor="#3C3939"
            android:textSize="16sp"
            app:layout_column="1"
            app:layout_row="2" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="301dp"
            android:layout_height="28dp"
            android:layout_margin="8dp"
            android:progress="20"
            android:scrollbarSize="6dp"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinsiyet"
            android:textSize="16sp"
            app:layout_column="0"
            app:layout_gravity="right|center_vertical"
            app:layout_row="3" />

        <RadioGroup
            android:id="@+id/radioGrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="3">

            <RadioButton
                android:id="@+id/bay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"

                android:fontFamily="sans-serif-medium"
                android:text="@string/Bay"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/bayan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"

                android:fontFamily="sans-serif-medium"
                android:text="@string/Bayan"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ideal_kilo_tw"
            android:textSize="16sp"
            app:layout_column="0"
            app:layout_gravity="right|center_vertical"
            app:layout_row="4" />

        <TextView
            android:id="@+id/idealK_tw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:padding="@dimen/padding_tv"
            android:textColor="#090808"
            android:textSize="16sp"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="4" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/durum_tw"
            android:textSize="16sp"
            app:layout_column="0"
            app:layout_gravity="right|center_vertical"
            app:layout_row="5" />

        <TextView
            android:id="@+id/durum_bilgisi"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:background="#FF9800"
            android:padding="@dimen/padding_tv"
            android:textColor="#090808"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="5" />

        <Space/>


    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


